--- a/src/app/carte/carte.component.html
+++ b/src/app/carte/carte.component.html
@@ -1,14 +1,10 @@
-
-<div *ngFor="let d of dogs">
-  {{d.name}} est un {{d.race}}
-</div>
-
-<div *ngFor="let c of clan">
-  <h1>clan:{{ c.name }}</h1>
-  <div>
-    <h2>Members List</h2>
-    <div *ngFor="let ml of c.memberList">{{ ml.name}}</div>
+<div class="background">
+  <div class="backgroundclan" *ngFor="let c of clan">
+    <h1>{{ c.name }}</h1>
+    <div>
+      <h2>Members List</h2>
+      <div *ngFor="let ml of c.memberList">{{ ml.name}}</div>
+    </div>
   </div>
-  
-
 </div>
+
