--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -24,7 +24,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>La tablée du dévellopeur</span>
+      <span>Royale Data</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
     <!-- Add Content Here -->
